--- a/styles/styles.css
+++ b/styles/styles.css
@@ -159,42 +159,42 @@ body {
   text-align: center;
 }
 
-.adventures-item-first {
+.advantures-item—hotel {
   color: #ffffff;
   background-color: #82B3D3;
 }
 
-.adventures-item-second {
+.advantures-item—square {
   color: #ffffff;
   background-color: #83B3D3;
 }
 
-.adventures-item-third {
+.advantures-item—road {
   color: #ffffff;
   background-color: #83B3D3;
 }
 
-.adventures-item-fourth {
+.advantures-item—tourists {
   color: #ffffff;
   background-color: #83B3D3
 }
 
-.adventures-item-fifth {
+.advantures-item—bridge {
   color: #ffffff;
   background-color: #82B3D3;
 }
 
-.adventures-item-sixth {
+.dvantures-item—house {
   color: #000000;
   background-color: #ffffff;
 }
 
-.adventures-item-seventh {
+.advantures-item—food {
   color: #000000;
   background-color: #ffffff;
 }
 
-.adventures-item-eighth {
+.advantures-item—souvenirs {
   color: #000000;
   background-color: #ffffff;
 }
