Сетки страниц на флексах

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -50,21 +50,35 @@ body {
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
-.page-header {}
+.page-header {
+  padding: 0 71px 0 238px;
+  position: relative;
+}
 
-.logo-link {}
+.logo-link {
+  left: 70px;
+  position: absolute;
+  top: 0;
+}
 
 .logo {}
 
-.navigation {}
+.navigation {
+  display: flex;
+  margin: 0 auto;
+}
 
 .navigation-list {
+  display: flex;
+  width: 600px;
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-.navigation-item {}
+.navigation-item {
+  padding: 20px 16px;
+}
 
 .navigation-link {
   font-weight: 700;
@@ -74,13 +88,16 @@ body {
   text-decoration: none;
 }
 
-.navigation-user-list {
+.navigation-user {
+  display: flex;
+  max-width: 350px;
   padding: 0;
-  margin: 0;
+  margin: 0 0 0 auto;
   list-style: none;
 }
+.navigation-user-list {
 
-.navigation-user {}
+}
 
 .navigation-user-link {
   text-decoration: none;
@@ -94,6 +111,7 @@ body {
   background-color: #756157;
   text-transform: uppercase;
 }
+
 
 .main-container {
   flex-grow: 1;
@@ -110,14 +128,22 @@ body {
   background-repeat: no-repeat;
   background-position: center top;
   text-align: center;
+  padding: 48px 0 78px 0;
 }
 
 .adventures {
   text-align: center;
 }
 
+.adventures-city-description {
+  width: 1200px;
+  height: 282px;
+  top: 485px;
+  overflow: hidden;
+}
+
 .adventures-caption {
-  padding: 0;
+  padding: 69px 290px 25px 290px;
   margin: 0 auto;
   font-weight: 700;
   font-size: 30px;
@@ -127,7 +153,7 @@ body {
 }
 
 .adventures-text {
-  padding: 0;
+  padding: 0 274px 90px 275px;
   margin: 0 auto;
   font-weight: 400;
   font-size: 22px;
@@ -136,16 +162,45 @@ body {
   color: #333333;
 }
 
-.adventures-list {}
+.adventures-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
 
+.adventures-item {
+  display: flex;
+}
+
+.adventures-container {
+  padding:92px 85px 111px 85px;
+  min-height: 384px;
+  box-sizing: border-box;
+  width: 400px;
+}
+
+.adventures-container-center {
+  padding:103px 85px 121px 85px;
+  min-height: 384px;
+  box-sizing: border-box;
+  width: 400px;
+}
+
+.adventures-container-use {
+  padding:80px 85px 81px 85px;
+  min-height: 384px;
+  box-sizing: border-box;
+  width: 400px;
+}
 
 .adventures-title {
-  padding: 0;
   margin: 0 auto;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
-  width: 650px;
   text-transform: uppercase;
 }
 
@@ -153,18 +208,24 @@ body {
   padding: 0;
   margin: 0 auto;
   font-weight: 400;
-  font-size: 22px;
-  line-height: 24px;
-  width: 650px;
+  font-size: 18px;
+  line-height: 21px;
 }
 
-.village {
-  background-color: #deebf3;
-  background-image: url("../images/сity.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center top;
-  text-align: center;
+.adventures-img-container {
+  width: 800px;
+  height: 100%;
+  overflow: hidden;
+}
+
+.adventures-img {
+  height: 100%;
+  width: auto;
+  display: block;
+}
+
+.adventures-item {
+  list-style: none;
 }
 
 .advantures-item—hotel {
@@ -219,12 +280,14 @@ body {
 }
 
 .interested {
+  width: 1200px;
+  height: 406px;
   text-align: center;
   list-style: none;
 }
 
 .interested-title {
-  padding: 0;
+  padding:96px 451px 20px 451px;
   margin: 0;
   font-weight: 700;
   font-size: 30px;
@@ -233,7 +296,7 @@ body {
 }
 
 .interested-description {
-  padding: 0;
+  padding: 0 304px 54px 304px;
   margin: 0;
   font-weight: 400;
   font-size: 22px;
@@ -241,7 +304,12 @@ body {
   color: #333333;
 }
 
-.button-button-hotel {
+.button-hotel {
+  padding: 0 412px 96px 412px;
+}
+
+.button-hotel-text {
+  padding:8px 50px 8px 50px;
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
@@ -272,25 +340,29 @@ body {
 }
 
 .footer-newsletter-title {
-  padding: 0;
+  padding:96px 396px 20px 396px;
   margin: 0;
   font-weight: 700;
   font-size: 30px;
   line-height: 36px;
   text-transform: uppercase;
   text-align: center;
+  color: #ffffff;
 }
 
 .footer-newsletter-description {
-  padding: 0;
+  padding: 0 104px 106px 104px;
   margin: 0;
   font-weight: 400;
-  font-size: 22px;
-  line-height: 28px;
+  font-size: 20px;
+  line-height: 26px;
   text-align: center;
+  color: #ffffff;
 }
 
-.mail-address {}
+.mail-address {
+
+}
 
 
 .button-subscription {}
@@ -300,28 +372,29 @@ body {
   margin: 0 auto;
 }
 
+.assigned-frame {
+  adding: 0 0 104px 258px;
+}
+
 .appointment-date {
-  width: 452px;
-  height: 52px;
-  text-align: center;
-  color: #000000;
-  background-color: #ffffff;
+
 }
 
 .appointment-date-mail {
-  padding: 8px 50px;
-  gap: 10px;
+  width: 452px;
+  height: 52px;
   font-weight: 700;
-  font-size: 20px;
-  line-height: 36px;
-  text-align: center;
+  font-size: 18px;
+  line-height: 24px;
+  text-align: left;
   text-transform: none;
 }
 
 
 .button-subscription {
-  padding: 8px 50px;
-  gap: 10px;
+  width: 352px;
+  height: 52px;
+  padding: 8px 50px 8px 50px;
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
@@ -329,10 +402,18 @@ body {
   text-transform: uppercase;
   color: #ffffff;
   background-color: #82B3D3;
+  border: none;
 }
 
+.contacts-container {
+  padding: 40px 70px 30px 70px;
+  justify-content:space-between;
+  display: flex;
+  flex-direction: row;
+}
 
 .footer-contacts {
+
   color: #000000;
   background-color: #ffffff;
 }
@@ -340,12 +421,16 @@ body {
 
 
 .footer-social-list {
+  display: flex;
+  justify-content:space-between;
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-.social-item {}
+.social-item {
+
+}
 
 .button {}
 
@@ -355,7 +440,9 @@ body {
 
 .yt {}
 
-.footer-phone {}
+.footer-phone {
+
+}
 
 .footer-phone-number {
   font-weight: 700;
