--- a/styles/styles.css
+++ b/styles/styles.css
@@ -198,6 +198,7 @@ body {
 }
 
 .navigation-link-button {
+  display: inline-table;
   font-weight: 700;
   width: 160px;
   height: 27px;
@@ -226,7 +227,6 @@ body {
 
 
 .navigation-link-button:active {
-  background-color: #756157;
   color: rgba(255, 255, 255, 0.3);
 }
 
@@ -590,7 +590,7 @@ body {
 .button-subscription {
   font-family: "PT Sans", "Arial", sans-serif;
   width: 232px;
-  height: 52px;
+  min-height: 52px;
   padding: 9px 50px 12px 48px;
   font-weight: 700;
   font-size: 20px;
@@ -703,6 +703,7 @@ body {
 
 .footer-phone-number {
   padding: 0 195px 5px 195px;
+  width: 331px;
   display: inline-block;
   font-weight: 400;
   font-size: 40px;
@@ -1089,11 +1090,11 @@ body {
 
 .child-info {
   position: relative;
-  margin-right: 46px;
 }
 
+
+
 .popover-info {
-  display: flex;
   position: relative;
   margin-left: 7px;
 }
@@ -1109,7 +1110,7 @@ body {
 .popover {
   width: 256px;
   padding-top: 18px;
-  font-family: "PT Sans", "Arial", sans-serif;
+  font-family: "PT Sans", sans-serif;
   color: #ffffff;
   font-weight: 400;
   font-size: 16px;
@@ -1151,19 +1152,16 @@ body {
   width: 26px;
   height: 26px;
   border-radius: 50%;
-  background-color: #82b3d3;
   top: -26px;
   left: 60px;
-  background-image:url("../images/i.svg");
-  background-size:cover;
+  position: absolute;
+  background-image: url("../images/i.svg");
+  color: #ffffff;
+  background-color: #82b3d3;
   background-repeat: no-repeat;
   background-position: center;
-  text-align: center;
   cursor: pointer;
-  align-items: center;
-  margin: 6px 50px 10px -42px;
 }
-
 
 .popover-information-link:hover + .popover {
   display: block;
@@ -1257,7 +1255,7 @@ body {
 }
 
 .modal-button {
-  font-family: "PT Sans", "Arial", sans-serif;
+  font-family: "PT Sans", sans-serif;
   background-color: #82b3d3;
   border-radius: 10px;
   font-weight: 700;
