--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,7 +101,6 @@ body {
   content: "";
   width: 66px;
   border-bottom: 1px solid #756257;
-  ;
   display: block;
   position: absolute;
   bottom: -1px;
@@ -111,7 +110,6 @@ body {
 .navigation-link-home .navigation-link-home::before {
   border-color: rgba(0, 0, 0, 0.3);
 }
-
 
 .navigation-user {
   display: flex;
@@ -125,7 +123,6 @@ body {
 .navigation-user-list {
   display: flex;
   justify-content: space-between;
-  padding: 26px 12px 24px 14px;
   margin: 0;
   list-style-type: none
 }
@@ -145,27 +142,31 @@ body {
   background-size: cover;
 }
 
-.navigation-user--serch::after {
-  width: 18px;
-  height: 17px;
-  background-image: url("../images/search.svg");
-
+.navigation-user--serch {
+  width: 44px;
+  height: 64px;
+  background: url("../images/search.svg") no-repeat center center;
+  display: block;
 }
 
-.navigation-user--favorites::after {
-  width: 18px;
-  height: 17px;
-  background-image: url("../images/like.svg");
+.navigation-user--favorites {
+  width: 44px;
+  height: 64px;
+  background: url("../images/like.svg") no-repeat center center;
+  display: block;
+  position: relative;
 }
 
 .navigation-user-link {
   text-decoration: none;
   position: relative;
   display: block;
-  padding-top: 10px;
 }
 
 .twelve {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-family: "PT Sans", "Arial", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -174,11 +175,11 @@ body {
   width: 20px;
   height: 20px;
   top: 13px;
+  right: 4px;
   background: #7DB54F;
   color: #ffffff;
   text-align: center;
   border-radius: 10px;
-  margin: -27px 0 0 5px;
 }
 
 .navigation-icon {
@@ -198,10 +199,9 @@ body {
 }
 
 .navigation-link-button {
-  display: inline-table;
+  display: block;
   font-weight: 700;
   width: 160px;
-  height: 27px;
   font-size: 16px;
   line-height: 20px;
   color: #ffffff;
@@ -210,26 +210,23 @@ body {
   border: none;
   cursor: pointer;
   text-align: center;
-  vertical-align: middle;
   border-radius: 4px;
+  padding: 8px 7px;
+  box-sizing: border-box;
 }
 
 .navigation-link-button:hover {
   background-color: #615048;
-
 }
-
 
 .navigation-link-button:focus {
   background-color: #615048;
   outline: none;
 }
 
-
 .navigation-link-button:active {
   color: rgba(255, 255, 255, 0.3);
 }
-
 
 .navigation-link-button--disabled,
 .navigation-link-button--disabled:hover,
@@ -239,7 +236,6 @@ body {
   cursor: default;
   color: #ffffff;
 }
-
 
 .main-container {
   flex-grow: 1;
@@ -258,8 +254,6 @@ body {
   text-align: center;
   padding: 52px 0 78px 0;
 }
-
-.Pattern {}
 
 .adventures {
   text-align: center;
@@ -590,8 +584,8 @@ body {
 .button-subscription {
   font-family: "PT Sans", "Arial", sans-serif;
   width: 232px;
-  min-height: 52px;
-  padding: 9px 50px 12px 48px;
+  min-height: 40px;
+  padding: 7px 50px 7px 48px;
   font-weight: 700;
   font-size: 20px;
   line-height: 36px;
@@ -602,12 +596,12 @@ body {
   cursor: pointer;
   border-radius: 0 4px 4px 0;
   border: none;
+  box-sizing: border-box;
 }
 
 
 .button-subscription:hover {
   background-color: #68A2CA;
-
 }
 
 
@@ -774,169 +768,6 @@ body {
 }
 
 .modal-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  display: flex;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(242, 242, 242, 0.8);
-
-  display: none;
-}
-
-.modal {
-
-  position: relative;
-  margin: auto;
-  padding: 64px 70px 64px 70px;
-  background-color: #ffffff;
-}
-
-.modal-auth {
-  width: 577px;
-  height: 516px;
-}
-
-.modal-title {
-  margin: 0;
-  margin-bottom: 64px;
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 30px;
-  line-height: 36px;
-  color: #000000;
-  text-transform: uppercase;
-}
-
-.modal-close-button {
-  position: absolute;
-  width: 52px;
-  height: 52px;
-  left: 613px;
-  top: 64px;
-  padding: 0;
-  right: 0;
-  background-color: #ffffff;
-  border: none;
-  background-image: url("../images/close.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  cursor: pointer;
-}
-
-
-.auth-form-recovery {
-  line-height: 22px;
-  color: #000000;
-}
-
-.auth-form-button {
-  width: 360px;
-  margin-bottom: 16px;
-}
-
-.auth-form .button + .button {
-  margin: 0;
-}
-
-
-.modal-container-close {
-  display: none;
-}
-
-.field-auth {
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  padding: 0;
-  margin: 0;
-}
-
-.check-in-list {
-  display: flex;
-}
-
-.date-text {
-  width: 113px;
-  height: 24px;
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 24px;
-  color: #000000;
-  margin: 12px 24px;
-}
-
-.popup-date .field-group {
-  margin: 0;
-  margin-bottom: 16px;
-}
-
-.auth-form-field {
-  width: 440px;
-  height: 48px;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 24px;
-  display: flex;
-  align-items: center;
-  color: #000000;
-  background: #F2F2F2;
-  border-radius: 4px;
-}
-
-.field {}
-
-.departure-list {
-  display: flex;
-}
-
-
-.limitation-text-check {
-  font-size: 16px;
-  line-height: 21px;
-  display: flex;
-  color: #FF5757;
-  flex-direction: row;
-  align-items: flex-start;
-  padding: 0px 20px;
-  margin-bottom: 23px;
-  width: 320px;
-  height: 21px;
-}
-
-.limitation-text {
-  font-size: 16px;
-  line-height: 21px;
-  display: flex;
-  color: #333333;
-  flex-direction: row;
-  align-items: flex-start;
-  padding: 0px 20px;
-  margin-bottom: 23px;
-  height: 21px;
-}
-
-
-.tickets-by-age {}
-
-
-.age-title {}
-
-.age-group {}
-
-.children-visitors {}
-
-.information-icon {
-  width: 26px;
-  height: 26px;
-  left: 59px;
-  top: 0;
-  background: #83B3D3;
-}
-
-.modal-container {
   height: 100%;
   width: 100%;
   background-color: rgba(242, 242, 242, 0.8);
@@ -978,7 +809,7 @@ body {
 
 .modal-close-button::before,
 .modal-close-button::after {
-  content: '';
+  content: "";
   width: 19px;
   height: 2px;
   background-color: #000000;
@@ -1049,12 +880,12 @@ body {
 }
 
 .modal-form-field {
-  font-family: "PT Sans", "Arial", sans-serif;
+  font-family: "PT Sans", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
   color: #000000;
-  padding: 12px 20px;
+  padding: 12px 45px 12px 20px;
   border: none;
   background-color: #f2f2f2;
   border-radius: 4px;
@@ -1075,7 +906,7 @@ body {
 
 .calendar {
   position: absolute;
-  background-image: url("../images/calendar.svg");
+  background-image: url("../images/icons/calendar-icon.svg");
   background-repeat: no-repeat;
   display: block;
   width: 18px;
@@ -1091,8 +922,6 @@ body {
 .child-info {
   position: relative;
 }
-
-
 
 .popover-info {
   position: relative;
@@ -1118,7 +947,7 @@ body {
   position: absolute;
   z-index: 1;
   box-sizing: border-box;
-  top: 0;
+  top: 22px;
   right: -66px;
   text-transform: none;
   display: none;
@@ -1135,7 +964,7 @@ body {
 }
 
 .popover::before {
-  content: '';
+  content: "";
   display: block;
   width: 0;
   height: 0;
@@ -1152,12 +981,11 @@ body {
   width: 26px;
   height: 26px;
   border-radius: 50%;
-  top: -26px;
+  background-color: #82b3d3;
+  top: -3px;
   left: 60px;
   position: absolute;
-  background-image: url("../images/i.svg");
-  color: #ffffff;
-  background-color: #82b3d3;
+  background-image: url("../images/info-icon.svg");
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
@@ -1180,6 +1008,7 @@ body {
   box-sizing: border-box;
   text-align: center;
   justify-self: end;
+  padding: 12px 40px;
 }
 
 .people-number-input::-webkit-outer-spin-button,
@@ -1209,17 +1038,14 @@ body {
   width: min-content;
 }
 
-.number-controls {
-  position: absolute;
-  width: 100%;
-  top: 50%;
-  transform: translateY(-50%);
-  display: flex;
-  justify-content: space-between;
-}
-
 .button-people-number-wrapper {
   padding: 14px 10px;
+  top: 0;
+  position: absolute;
+}
+
+.number-more {
+  left: 70px;
 }
 
 .number-button {
@@ -1247,7 +1073,6 @@ body {
 .number-button:focus {
   outline: 3px solid #82b3d3;
   border-radius: 4px;
-
 }
 
 .number-button:active .number-button-svg {
